1997-12-17  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (ftp_port, ftp_accept): support for passive mode.

1997-12-03  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* fn_tag.c (fn_tag): globbing tag/untag (-t, -u).

	* main.c (print_usage): fixed shadow bug.

1997-12-02  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* fn_scroll.c (aux_scroll_line): handle `opt_wrap'.
	(aux_scroll_page): handle `opt_wrap'.

	* options.op (opt_wrap): new option.

1997-11-24  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (ftp_list): dup path before storing in dir structure.
	store path in structure.

	* fn_scroll.c (aux_scroll_page): changed wrapping behavior.

1997-11-21  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* main.c: fixed typo.
	(print_usage): changed calling convention; callers changed.

1997-11-20  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* fn_select.c (fn_reload): new function.

	* tag.c (change_curdir): handle NULL `curdir'.

	* ftp.c (ftp_cd): new argument `force'; changed callers.

	* directory.c (get_dir): new argument `force'.

1997-11-14  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (ftp_init): new function
	(ftp_pwd): check for and handle DOS path names
	(ftp_cwd): check for and handle DOS path names

1997-11-03  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (ftp_pwd): set ftp_pcwd

1997-10-29  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* directory.c (opt_set_sort): don't sort curdir if it's NULL.
	(get_dir): moved call to dir_sort here.

	* readdir.c (init_parse_time): new function.
	(parse_time): init non-standard fields of struct tm from global
	now.  Use global now instead of calling time(), gmtime() on each
	invocation.

	* hstrerror.c (hstrerror): renamed h_errlist to _h_errlist to
	avoid conflict with libresolv on Solaris.  _h_errlist & _h_nerr
	now static.

1997-10-25  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* fn_basic.c (fn_help): listings, more info on options.
