@@ -2,6 +2,7 @@ cftp was written by Dieter Baron <dillo@giga.or.at>.
 
 Thanks to these people for suggestions and testing:
 
+Adrian Bridgett <adrian.bridgett@poboxes.com>
 Armin Obersteiner <armin@giga.or.at>
 Konrad Neuwirth <konrad@smc.univie.ac.at>
 Larry Ayers <layers@marktwain.net>
