@@ -1,3 +1,12 @@
+1998-01-21  Dieter Baron  <dillo@danbala.tuwien.ac.at>
+
+	* main.c (parse_url): ignore trailing colon in host part.
+	(deurl): treat percent at end of string as regular char.
+
+1997-12-18  Dieter Baron  <dillo@danbala.tuwien.ac.at>
+
+	* fntable.h.proto: added newline to last line.
+
 1997-12-17  Dieter Baron  <dillo@danbala.tuwien.ac.at>
 
 	* ftp.c (ftp_port, ftp_accept): support for passive mode.
